# slint-radial-menu

./: Cargo.toml  README.md  build.rs
examples/: demo.rs
src/: lib.rs
ui/: menu-item.slint  radial-menu.slint  structs.slint
